# zxing-cpp

./: AGENTS.md  CMakeLists.txt  source_files.cmake
cli/src/: ImageReaderSource.cpp  ImageReaderSource.h  main.cpp
core/src/zxing/common/: GridSampler.cpp
core/src/zxing/multi/qrcode/detector/: MultiFinderPatternFinder.cpp
core/src/zxing/qrcode/: QRCodeReader.cpp  QRCodeReader.h
core/src/zxing/qrcode/detector/: Detector.cpp  FinderPatternFinder.cpp  FinderPatternFinder.h  FinderPatternTemplateMatcher.cpp  FinderPatternTemplateMatcher.h
docs/: qr-finder-repair-summary.md  qr-general-repair-build.md
experiments/occlusion_benchmark/: baseline_results.json  extra_results.json  improved_results.json  run_benchmark.py
finder-marker/: main.cpp
qr_fig/: fig.pptx  ~$fig.pptx
scripts/: verify_qr_damage_samples.sh
